<resources>
    <string name="app_name">MyTracker</string>

    <string name="date">Date Unspecified</string>
    <string name="calory">Calory</string>
    <string name="timer">Timer</string>
    <string name="distance">Distance</string>
    <string name="steps">Steps</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>

    <string name="initCalory">0 kCal</string>
    <string name="initTimer">00:00:00</string>
    <string name="initDistance">0 m</string>

    <string name="setGoal">Set Goal:</string>
    <string name="empty">0</string>
    <string name="set">Set</string>

    <string name="daily">DAILY RUN</string>
    <string name="maxtest">99999 [90%] (Best: 99999)</string>
    <string name="back">Main Menu</string>

    <string name="tap">Tap to view details</string>

    <string name="test">99999 Steps</string>
    <string name="back2">BACK</string>
    <string name="delete">DELETE</string>
</resources>
