<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBase"
    tools:context="mdpcw2.mytracker.track_activity">

    <TextView
        android:id="@+id/txtTrackDate"
        android:layout_width="316dp"
        android:layout_height="63dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgTrackCalory"
        android:layout_width="51dp"
        android:layout_height="47dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calory" />

    <ImageView
        android:id="@+id/imgTrackTimer"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="112dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgTrackCalory"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/timer" />

    <ImageView
        android:id="@+id/imgTrackDistance"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toEndOf="@+id/imgTrackTimer"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/txtTrackCalory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="168dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/calory"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTrackTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="164dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="168dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTrackCalory"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTrackDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/distance"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtTrackTimer"
        app:layout_constraintTop_toBottomOf="@+id/imgTrackDistance" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="286dp"
        android:layout_height="269dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTrackSteps"
        android:layout_width="184dp"
        android:layout_height="105dp"
        android:layout_marginBottom="140dp"
        android:layout_marginLeft="108dp"
        android:fontFamily="serif"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/steps"
        android:textColor="@android:color/white"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imgTrackSteps"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/step" />

    <Button
        android:id="@+id/btnTrackStartStop"
        android:layout_width="105dp"
        android:layout_height="59dp"
        android:layout_marginBottom="36dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
