<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBase"
    tools:context="mdpcw2.mytracker.detail_activity">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="355dp"
        android:layout_height="284dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDetailStep"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginBottom="148dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/step" />

    <ImageView
        android:id="@+id/imgDetailTimer"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginBottom="76dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/timer" />

    <ImageView
        android:id="@+id/imgDetailDistance"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginBottom="148dp"
        android:layout_marginLeft="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/location" />

    <ImageView
        android:id="@+id/imgDetailCalory"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginBottom="76dp"
        android:layout_marginLeft="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/calory" />

    <TextView
        android:id="@+id/txtDetailDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtDetailStep"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginBottom="148dp"
        android:layout_marginStart="104dp"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:text="@string/test"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDetailTimer"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginBottom="76dp"
        android:layout_marginStart="104dp"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:text="@string/test"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDetailDistance"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:text="@string/test"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDetailCalory"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:text="@string/test"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnDetailBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="16dp"
        android:text="@string/back2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnDetailDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:layout_marginRight="16dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/btnDetailBack"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
